--- a/header.css
+++ b/header.css
@@ -11,28 +11,70 @@ align-items: center;
     height: 45px;
 
 }
-.conteiner__titulo,.container__frase{
-display: none;
+.container__titulo, .container__imagem, .container__frase{
+    display: none;
 
 }
+
+.container__titulo, .container__frase{
+    display: flex;
+
+}
+.cx-texto{
+    display: flex;
+    justify-content: center;
+}
+.orientacao3{
+    display: block;
+    font-size: 30px;
+    color: aquamarine;
+    border: 3px solid white;
+    margin-top: 3em;
+    padding: 1em;
+}
+.orientacao, .orientacao2{
+    display: none;
 }
 
-@media screen and(min-width:1024px) {
-    .container__frase {
+@media screen and(min-width:768px) {
+    .container__titulo {
         font-size: 30px;
-        display:inline-block;
+        display: inline-block;
+}
+    .container__titulo{
+        font-weight: 400;
+}
+    .orientacao2{
+        display:block;font-size: 30px;
+        color: white;
+        border: 3px solid black;
+        margin-top: 3em;
+        padding: 1em;
+        
+}
+    .orientacao2.orientacao3{
+        display: none;
+    }    
+}
+@media screen and(min-width: 1024px){
+    .container__frase{
+        font-size: 30px;
+        display: inline-block;
     }
     .container__frase{
         font-weight: 400;
         padding-left: 5em;
-
-    
     }
     .orientacao{
-        display:block;
-        font-size: 30px;
-        color:var(--lilas);
-        border: 3px solid greenyellow;
+        display: block;
+        font: 30px;
+        color: var(--fundo-azul);
+        border: 3px solid lightcoral;
+        margin-top: 3em;
+        padding: 1em;
     }
-    
+    .orientacao2, .orientacao3{
+        display: none;
+    }
 }
+    
